# reactos

./: .gitignore  CMakeLists.txt  README.md  fuck.txt
.github/workflows/: build.yml
base/applications/: CMakeLists.txt
base/services/umpnpmgr/: rpcserver.c
base/shell/explorer/: CMakeLists.txt  explorer.exe.manifest  precomp.h  settings.cpp  traywnd.cpp
base/shell/rshell/: CMakeLists.txt
base/system/smss/: smss.c
base/system/winlogon/: sas.c  winlogon.c
boot/bootdata/: bootcd.ini  floppy_pc98.ini  hivedef.inf  hivesft.inf  hivesys.inf  hybridcd.ini  livecd.inf  livecd.ini  txtsetup.sif
boot/freeldr/: FREELDR.INI
dll/: CMakeLists.txt
dll/apiset/: CMakeLists.txt
dll/apisets/: api-ms-win-core-localization-l1-1-0.spec
dll/cpl/desk/: desk.h  muireg.c  screensaver.c
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec
dll/ntdll/include/: ntdllp.h
dll/ntdll/ldr/: ldrapi.c  ldrinit.c  ldrpe.c  ldrutils.c
dll/ntdll/nt_0600/: CMakeLists.txt  ntdll_vista.spec
dll/ntdll/rtl/: libsupp.c  version.c
dll/opengl/opengl32/: CMakeLists.txt  icdload.c
dll/win32/: CMakeLists.txt
dll/win32/DComp/: CMakeLists.txt  dcomp.spec  device.c
dll/win32/KernelBase/: CMakeLists.txt  KB.h  KernelBase.spec
dll/win32/WLCLNTFY/: CMakeLists.txt  WLCLNTFY.rc  WLCLNTFY.spec
dll/win32/advapi32/: advapi32.spec
dll/win32/bcrypt/: bcrypt_main.c
dll/win32/cfgmgr32/: cfgmgr32.spec
dll/win32/comctl32/: CMakeLists.txt  amd64_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef.manifest  commctrl.c  listview.c  tooltips.c  x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef.manifest
dll/win32/comdlg32/: CMakeLists.txt  cdlg32.c  itemdlg.c
dll/win32/credui/: credui.spec
dll/win32/dwmapi/: CMakeLists.txt
dll/win32/es/: CMakeLists.txt  bruh.c  es.spec
dll/win32/fltlib/: CMakeLists.txt
dll/win32/ieframe/: ieframe.spec
dll/win32/imm32/: CMakeLists.txt  precomp.h
dll/win32/iphlpapi/: iphlpapi.spec
dll/win32/kernel32/: kernel32.spec
dll/win32/msafd/: msafd.h
dll/win32/mscorwks/: CMakeLists.txt  mscorwks.spec
dll/win32/msgina/: gui.c
dll/win32/msvcrt/: msvcrt.spec
dll/win32/ncrypt/: ncrypt.spec
dll/win32/ole32/: ole32.rgs  ole32.spec
dll/win32/oleaut32/: oleaut32.spec  widl.0miaaa  widl.oDfaaa
dll/win32/powrprof/: powrprof.spec
dll/win32/propsys/: CMakeLists.txt  propsys.spec
dll/win32/rpcrt4/: ndr_stubless.c  rpcrt4.spec
dll/win32/samlib/: samlib.c  samlib.spec
dll/win32/secur32/: secur32.spec
dll/win32/setupapi/: setupapi.spec
dll/win32/shdocvw/: CMakeLists.txt
dll/win32/shell32/: CMakeLists.txt  precomp.h  shell32.cpp  shell32.spec  shlexec.cpp  shresdef.h  stubs.cpp
dll/win32/shlwapi/: CMakeLists.txt  shlwapi.spec  string.c
dll/win32/srclient/: srclient_main.c
dll/win32/sxs/: sxs.c
dll/win32/syssetup/: wizard.c
dll/win32/uxtheme/: CMakeLists.txt  ncscrollbar.c  stylemap.c  system.c  themehooks.c  uxtheme_vista.spec
dll/win32/version/: version.c  version.spec
drivers/base/: CMakeLists.txt
drivers/base/bootvid/: CMakeLists.txt  common.c  fbbvid.cmake  precomp.h
drivers/base/bootvid/framebuf/: bootvid.c  fbbvid.rc  framebuf.h
drivers/base/bootvid/i386/pc/: bootvid.c  vga.c
drivers/base/wpprecorder/: CMakeLists.txt  wpprecorder.c  wpprecorder.h  wpprecorder.rc  wpprecorder.spec
drivers/filesystems/: CMakeLists.txt
drivers/filters/: CMakeLists.txt
drivers/usb/: CMakeLists.txt
drivers/usb/wdf/ucx01000/: CMakeLists.txt  UCX01000.cpp  UCX01000.h  UCX01000.rc
drivers/usb/wdf/usbhub3/: CMakeLists.txt  hubfdo.cpp  ioctl.cpp  todo.cpp  usbhub3.cpp  usbhub3.hpp  usbhub3.rc
drivers/usb/wdf/usbxhci_win8/: CMakeLists.txt  usbxhci.cpp  usbxhci.hpp  usbxhci.rc
drivers/usb/wdf/usbxhci_win8/xhcilib/: xhci.cpp  xhci.hpp  xhcihardware.hpp
hal/: CMakeLists.txt
hal/halvista/: CMakeLists.txt  hal.spec  halacpi.rc
hal/halvista/generic/: depre.cpp  halinit.c  halinit.cpp  io.cpp  x86Bios.c
hal/halvista/include/: hal.h
hal/halx86/: CMakeLists.txt
media/doc/: WINESYNC.txt
media/fonts/: CMakeLists.txt
media/inf/: CMakeLists.txt  hdaudio.inf  hdc.inf  net1q32.inf  netw5v32.inf  nvme.inf  sdbus.inf  sdstor.inf  syssetup.inf  usbhub3.inf  usbprint.inf  usbvideo.inf  usbxhci.inf  wdma_usb.inf
media/themes/: CMakeLists.txt
modules/: CMakeLists.txt  Example.reg  FileDiago.reg  ahh.reg  explorer.reg  taskbar.reg
modules/config/: SECURITY
modules/drivers/: HdAudio.sys  USBXHCI.SYS  WdFilter.sys  Wdf01000.sys  WdfLdr.sys  acpi.sys  classpnp.sys  hdaudio.PNF  mouhid.sys  pci.sys  scsiport.sys  storport.sys  usbd.sys  vgapnp.sys
modules/system32/: clfs.sys
ntoskrnl/: CMakeLists.txt  ntos.cmake  ntoskrnl.spec
ntoskrnl/cc/: fs.c
ntoskrnl/config/: cmapi.c  cmconfig.c
ntoskrnl/dbgk/: dbgkutil.c
ntoskrnl/ex/: init.c  lookas.c  resource.c
ntoskrnl/fsrtl/: oplock.c
ntoskrnl/fstub/: halstub.c
ntoskrnl/kd64/: kddata.c
ntoskrnl/ke/: dpc.c  krnlinit.c  mutex.c  thrdobj.c  thrdschd.c
ntoskrnl/lpc/: close.c  complete.c  connect.c  create.c  listen.c  port.c  reply.c  send.c
ntoskrnl/mm/: freelist.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
ntoskrnl/ob/: obref.c
ntoskrnl/po/: power.c
ntoskrnl/ps/: job.c  kill.c  query.c  thread.c
ntoskrnl/rtl/: libsupp.c
ntoskrnl/se/: accesschk.c
sdk/cmake/: CMakeMacros.cmake  baseaddress.cmake  baseaddress_msvc.cmake  gcc.cmake
sdk/lib/: CMakeLists.txt
subsystems/: CMakeLists.txt
win32ss/: CMakeLists.txt  pch.h  w32ksvc32.h
win32ss/dwm/: CMakeLists.txt
win32ss/dwm/dwm/: CDwmAppHost.cpp  CDwmAppHost.hpp  CMakeLists.txt  dwm.cpp  dwm.hpp
win32ss/dwm/presentationdebug/: CMakeLists.txt  PresentationDebug.h  PresentationDebug.rc  PresentationDebug.spec  entry.c  stubs.c
win32ss/dwm/uDWM/: CDesktopManager.cpp  CDesktopManager.hpp  CMakeLists.txt  CppEntry.cpp  dwmredir.h  entry.c  uDWM.h  uDWM.spec
win32ss/dwm/uDWM/classes/: CWindowList.cpp  CWindowList.hpp
win32ss/include/: ntuser.h
win32ss/reactx/: CMakeLists.txt
win32ss/reactx/dxgkrnl/: CMakeLists.txt  dxgkrnl.spec  entry.cpp  rxgkrnl.h
(+392 files in other folders)
